# spot-diggz

./: .coderabbit.yaml  .editorconfig  .gitignore  .lintstagedrc.json  .prettierignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package-lock.json  package.json  sdz_seed_spots.sh  spot-diggz.code-workspace
.claude/: settings.json
.devcontainer/: Dockerfile  Dockerfile.minimal  Dockerfile.simple  devcontainer.json  setup.sh
.husky/: pre-commit
api/: .env.example  Cargo.toml
docs/: DEVELOPMENT_SETUP.md  api_architecture.md  cd_architecture.md  env_inventory.md  google_places_verification.md  openapi.yaml  repo_structure.md  secrets_management.md  seed_runbook.md  spot_diggz_overview.md  ui_tokens.md  (+1 more)
src/api/: Cargo.toml
src/api/src/: bootstrap.rs  main.rs
src/api/src/application/use_cases/: create_spot_use_case.rs  get_spot_use_case.rs  health_check_use_case.rs  mod.rs  spot_repository.rs  user_repository.rs
src/api/src/domain/: models.rs
src/api/src/infrastructure/: firestore_spot_repository.rs  firestore_user_repository.rs  in_memory_spot_repository.rs  mod.rs
src/api/src/presentation/: router.rs
src/api/src/presentation/handlers/: health_handler.rs  mod.rs  spot_handler.rs  user_handler.rs
src/api/src/presentation/middleware/: auth.rs
src/ui/: .env  (+4 more)
web/api/: .dockerignore  .env.tpl  .gcloudignore  Cargo.toml  Dockerfile  clippy.toml
web/api/src/: main.rs
web/api/src/application/use_cases/: add_mylist_use_case.rs  create_spot_use_case.rs  get_spot_use_case.rs  health_check_use_case.rs  list_mylist_use_case.rs  list_spots_use_case.rs  mod.rs  mylist_repository.rs  remove_mylist_use_case.rs  spot_repository.rs  storage_repository.rs  update_spot_use_case.rs
web/api/src/domain/: models.rs
web/api/src/infrastructure/: firestore_mylist_repository.rs  firestore_spot_repository.rs  firestore_user_repository.rs  in_memory_mylist_repository.rs  in_memory_spot_repository.rs  in_memory_user_repository.rs  mod.rs  storage_disabled_repository.rs
web/api/src/presentation/: error.rs  router.rs
web/api/src/presentation/handlers/: mod.rs  mylist_handler.rs  spot_handler.rs
web/api/src/presentation/middleware/: admin.rs  auth.rs  mod.rs
(+296 files in other folders)
