[package]
name = "sdz_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
http = "1"
jsonwebtoken = "10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
once_cell = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
